fixed footer content spacing

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,7 +12,8 @@
     display: inline-block;
     a {
       text-decoration: none;
-      color: white
+      color: white;
+      margin-right: 50px;
     }
   }
 }
